--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -126,36 +126,12 @@ ul.dropdown-cart li .item-right button{
 
 
 
-/* slider */
-.transition-timer-carousel .carousel-caption {
-    background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 4%, rgba(0,0,0,0.5) 32%, rgba(0,0,0,1) 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(4%,rgba(0,0,0,0.1)), color-stop(32%,rgba(0,0,0,0.5)), color-stop(100%,rgba(0,0,0,1))); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.1) 4%,rgba(0,0,0,0.5) 32%,rgba(0,0,0,1) 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.1) 4%,rgba(0,0,0,0.5) 32%,rgba(0,0,0,1) 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.1) 4%,rgba(0,0,0,0.5) 32%,rgba(0,0,0,1) 100%); /* IE10+ */
-    background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.1) 4%,rgba(0,0,0,0.5) 32%,rgba(0,0,0,1) 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
-    width: 100%;
-    left: 0px;
-    right: 0px;
-    bottom: 0px;
-    text-align: left;
-    padding-top: 5px;
-    padding-left: 15%;
-    padding-right: 15%;
-}
-.transition-timer-carousel .carousel-caption .carousel-caption-header {
-    margin-top: 10px;
-    font-size: 24px;
-}
 
-@media (min-width: 970px) {
-    /* Lower the font size of the carousel caption header so that our caption
-    doesn't take up the full image/slide on smaller screens */
-    .transition-timer-carousel .carousel-caption .carousel-caption-header {
-        font-size: 36px;
-    }
-}
+
+
+
+
+/* slider */
 .transition-timer-carousel .carousel-indicators {
     bottom: 0px;
     margin-bottom: 5px;
@@ -182,6 +158,80 @@ ul.dropdown-cart li .item-right button{
     transition: width 4.25s linear;
 }
 
+/* Carousel Header Styles */
+.header-text {
+    position: absolute;
+    top: 30%;
+    left: 2%; 
+    /* left: 1.8%; */
+    right: auto;
+    width: 96.66666666666666%;
+    color: #fff;
+}
+
+.header-text h2 {
+    font-size: 32px;
+    margin-bottom: 0px;
+}
+
+.header-text h2 span {
+    background-color: #2980b9;
+    padding: 10px 20px;    
+}
+
+.header-text h3 span {
+    background-color: #000;
+    font-size: 15px;
+    padding: 15px;        
+}
+
+.btn-min-block {
+    min-width: 170px;
+    line-height: 12px;
+    font-size: 12px;
+    margin-top: 10px;
+}
+
+.btn-theme {
+    color: #fff;
+    background-color: transparent;
+    border: 2px solid #fff;
+    margin-right: 15px;
+    text-shadow: 1px 1px 3px #000000;
+    box-shadow: 1px 1px 3px #000000;
+}
+
+.btn-theme:hover {
+    color: #000;
+    background-color: #fff;
+    border-color: #fff;
+    text-shadow: none;
+    box-shadow: 1px 1px 3px #000000;
+}
+
+@media (min-width: 680px) {
+    .header-text h2 {
+        font-size: 45px;
+    }
+    .header-text h3 span {
+        font-size: 20px;
+    }    
+}
+
+@media (min-width: 970px) {
+    .header-text h2 {
+        font-size: 60px;
+    }
+    .header-text h3 span {
+        font-size: 25px;
+    }
+    
+    .btn-min-block {
+        line-height: 26px;
+        font-size: 18px;
+        margin-top: 25px;
+    }
+}
 
 
 
@@ -198,7 +248,7 @@ ul.dropdown-cart li .item-right button{
 .footer {
     background: #EDEFF1;
     height: auto;
-    padding-bottom: 30px;
+    padding-bottom: 25px;
     position: relative;
     width: 100%;
     border-bottom: 1px solid #CCCCCC;
@@ -216,7 +266,7 @@ ul.dropdown-cart li .item-right button{
     font-size: 18px;
     font-weight: 600;
     line-height: 27px;
-    padding: 40px 0 10px;
+    padding: 10px 0 10px;
     text-transform: uppercase;
 }
 .footer ul {
@@ -280,7 +330,7 @@ ul.dropdown-cart li .item-right button{
     float: left;
     height: 36px;
     line-height: 36px;
-    margin: 0 8px 0 0;
+    margin: 0 8px 8px 0px;
     padding: 0;
     text-align: center;
     width: 36px;
